--- a/Frontend/src/app/MOHComponents/add-mother/add-mother.component.html
+++ b/Frontend/src/app/MOHComponents/add-mother/add-mother.component.html
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-md-2">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Mother ID" type="text" formControlName="mother_id">
+                                <input matInput placeholder="Mother ID" type="text" formControlName="mother_id" readonly>
                                 <div *ngIf="submit && addMotherSchema.controls.mother_id.errors" class="error">
                                     <div *ngIf="addMotherSchema.controls.mother_id.errors.required">This field is required</div>
                                 </div>
@@ -39,7 +39,7 @@
                     <div class="row">
                         <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Mother's Name" type="text" formControlName="mothers_name">
+                                    <input matInput placeholder="Mother's Name" type="text" formControlName="mothers_name" readonly>
                                     <div *ngIf="submit && addMotherSchema.controls.mothers_name.errors" class="error">
                                         <div *ngIf="addMotherSchema.controls.mothers_name.errors.required">This field is required</div>
                                     </div>
@@ -47,7 +47,7 @@
                         </div>
                         <div class="col-md-5">
                                 <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Address" type="text" formControlName="address">
+                                    <input matInput placeholder="Address" type="text" formControlName="address" readonly>
                                     <div *ngIf="submit && addMotherSchema.controls.address.errors" class="error">
                                         <div *ngIf="addMotherSchema.controls.address.errors.required">This field is required</div>
                                     </div>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="col-md-2">
                                 <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Age" type="number" formControlName="age" min="0" max="45">
+                                    <input matInput placeholder="Age" type="number" formControlName="age" min="0" max="45" readonly>
                                     <div *ngIf="submit && addMotherSchema.controls.age.errors" class="error">
                                         <div *ngIf="addMotherSchema.controls.age.errors.required">This field is required</div>
                                     </div>
@@ -295,7 +295,7 @@
                                 </mat-form-field>
                         </div>
                     </div>
-                    <input type="submit" value="Submit Mother details" class="btn btn-danger pull-right">
+                    <input type="submit" value="Submit Mother details" class="btn btn-info pull-right">
                 </form>
                 <div *ngIf="success"><h5>You submitted a new baby record successfully</h5></div>
                 </div>
