translate to sinhala

--- a/Frontend/src/app/MOHComponents/view-mothers/view-mothers.component.html
+++ b/Frontend/src/app/MOHComponents/view-mothers/view-mothers.component.html
@@ -1,7 +1,8 @@
+
 <div class="main-content">
   <router-outlet></router-outlet>
   <div class="row">
-    <div class="col-md-3" ><a routerLink="addMother" class="btn btn-info btn-block">Add New Mother</a></div>
+    <div class="col-md-3" ><a routerLink="addMother" class="btn btn-info btn-block">{{'mother.form'| translate }}</a></div>
   </div>
   <div class="row">
     <div class="col-md-12">
