--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -1,4 +1,5 @@
 
+
   <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
@@ -183,7 +184,7 @@
                           </mat-panel-description>
                         </mat-expansion-panel-header>
                       
-                      <h5>Frist</h5>
+                        <h5>{{ 'family.Pregnancy_details__Pregnancy__First' | translate }}</h5>
                       <div class="row">
                         <div class="col-md-5">
                           <mat-form-field class="example-full-width">
@@ -197,7 +198,7 @@
                     </div>
                       </div>
 
-                      <h5>Second</h5>
+                      <h5>{{ 'family.Pregnancy_details__Pregnancy__Second' | translate }}</h5>
                       <div class="row">
                         <div class="col-md-5">
                           <mat-form-field class="example-full-width">
@@ -211,7 +212,7 @@
                     </div>
                       </div>
 
-                      <h5>Third</h5>
+                      <h5>{{ 'family.Pregnancy_details__Pregnancy__Third' | translate }}</h5>
                       <div class="row">
                         <div class="col-md-5">
                           <mat-form-field class="example-full-width">
