--- a/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
+++ b/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
@@ -1,3 +1,4 @@
+
 <div class="main-content">
     <router-outlet></router-outlet>
 <div class="container-fluid">
@@ -5,7 +6,7 @@
             
             <div class="col-md-4"></div>
             <div class="col-md-5"><h3></h3></div>
-            <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-info btn-block">Add a new Baby</a></div>
+            <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-info btn-block">{{'motherBabyJoined.fill'| translate }}</a></div>
         </div>
       <div class="row">
           <div class="col-md-12">
