--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -7,8 +7,18 @@
         <div class="row">
                 
                 
-                <div class="col-md-6"></div>
-                <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-info btn-block">{{ 'family.generateReports' | translate }}</a></div>
+                <div class="col-md-6">
+                    
+                </div>
+                <div *ngIf="checkRoute()" class="col-md-3"> 
+                    <button class="btn btn-info btn-block" mat-button [matMenuTriggerFor]="menu">{{ 'family.generateReports' | translate }}</button>
+                        <mat-menu #menu="matMenu">
+                        <!--<button mat-menu-item>Current Users of M. Contra. Methods</button>-->
+                        <a mat-menu-item routerLink="ModernContMethods">Current Users of M. Contra. Methods</a>
+                        <button mat-menu-item>Contraceptive Prevalence</button>
+                        
+                        </mat-menu>
+                </div>
                 <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-info btn-block">{{ 'family.add' | translate }}</a></div>
             </div>
             
