Contraceptive Prevalence Graph Added Completely

--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -15,7 +15,8 @@
                         <mat-menu #menu="matMenu">
                         <!--<button mat-menu-item>Current Users of M. Contra. Methods</button>-->
                         <a mat-menu-item routerLink="ModernContMethods">Current Users of M. Contra. Methods</a>
-                        <button mat-menu-item>Contraceptive Prevalence</button>
+                        <a mat-menu-item routerLink="ContraPrevailMethods">Contraceptive Prevalence</a>
+                        <!--<button mat-menu-item>Contraceptive Prevalence</button>-->
                         
                         </mat-menu>
                 </div>
