pregnncy form sinhala

--- a/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
+++ b/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
@@ -172,7 +172,7 @@
                                         <div class="col-md-3"><p>{{'baby.Breast_Feeding' | translate}}</p></div>
                                         <div class="col-md-9">
                                           <div class="row">
-                                            <div class="col-md-6">Breast Feeding During First Hour</div>
+                                            <div class="col-md-6">{{'baby.breast_feeding_breast_feeding_during_the_first_hour' | translate}}</div>
                                             <div class="col-md-3">
                                                 <label class="container">{{'baby.yes' | translate}}
                                                     <input id="yes" readonly="{{onChange()}}" type="radio" formControlName="breast_feeding_breast_feeding_during_the_first_hour" value="yes">
@@ -3591,7 +3591,7 @@
                                                <div class="col-md-1">{{'baby.1_month' | translate}}</div>
                                                <div class="col-md-1">{{'baby.2_month' | translate}}</div>
                                                <div class="col-md-1">{{'baby.4_month' | translate}}</div>
-                                               <div class="col-md-1">{{'baby.6_month' | translate}}</div>
+                                               <div class="col-md-1">{{'baby.six_month' | translate}}</div>
                                                <div class="col-md-1">{{'baby.9_month' | translate}}</div>
                                                <div class="col-md-1">{{'baby.12_month' | translate}}</div>
                                                <div class="col-md-1">{{'baby.18_month' | translate}}</div>
@@ -4183,7 +4183,7 @@
                                               </div>
                                              </div>
                                              <div class="row">
-                                              <div class="col-md-2">Hip Joint</div>
+                                              <div class="col-md-2">{{'baby.hip_joint' | translate}}</div>
                                               <div class="col-md-1">
                                                 <mat-form-field class="example-full-width">
                                                   <input matInput placeholder="" readonly="{{onChange()}}" type= "text" formControlName="one_month_hip_joint" >
