phm daily reports simplyfied

--- a/Frontend/src/app/MOHComponents/phm-daily-reports/phm-daily-reports.component.html
+++ b/Frontend/src/app/MOHComponents/phm-daily-reports/phm-daily-reports.component.html
@@ -107,7 +107,15 @@
                       </div>
                       <div class="second_field">
                         <!--start second field-->
-                        <h4>01. Details About Approved Families</h4>
+                        <mat-expansion-panel>
+                          <mat-expansion-panel-header>
+                            <mat-panel-title>
+                              <h5>01. Details About Approved Families</h5>
+                            </mat-panel-title>
+                            <mat-panel-description>
+                              Click to View/Edit
+                            </mat-panel-description>
+                          </mat-expansion-panel-header>
                         <div class="row">
                           <div class="col-md-6">
                             <mat-form-field class="example-full-width">
@@ -133,10 +141,19 @@
                           </div>
                         </div>
                         <!--end second field-->
+                        </mat-expansion-panel>
                       </div>
                       <div class="third_field">
                         <!--start third field-->
-                        <h4>02.Mother Protection In Registration </h4>
+                        <mat-expansion-panel>
+                          <mat-expansion-panel-header>
+                            <mat-panel-title>
+                              <h5>02.Mother Protection In Registration </h5>
+                            </mat-panel-title>
+                            <mat-panel-description>
+                              Click to View/Edit
+                            </mat-panel-description>
+                          </mat-expansion-panel-header>
                         <div class="row">
                           <div class="col-md-6">Number of pregnant mothers</div>
                           <div class="col-md-3">
@@ -314,13 +331,22 @@
                             </mat-form-field>
                           </div>
                         </div>
+                        </mat-expansion-panel>
                         <!--end third field-->
                       </div>
                       <!--end 1st page-->
                     </div>
                     <div class="third_section">
                       <!--start third section-->
-                      <h4>03. Mother Protection At Delivery </h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>03. Mother Protection At Delivery </h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-6">Total number of deliveries from permanant mothers</div>
                         <div class="col-md-3">
@@ -553,10 +579,19 @@
                           </div>
                         </div>
                       <!--end third section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="fourth_section">
                       <!--start 4 section-->
-                      <h4>04. Mother Protection(1st After Delivery Visit)</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>04. Mother Protection(1st After Delivery Visit)</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-6">
                           <mat-form-field class="example-full-width">
@@ -647,10 +682,19 @@
                         </div>
                       </div>
                       <!--end 4th section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="fifth_section">
                       <!--start 5 section-->
-                      <h4>05. Result Of Pregnancy</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>05. Result Of Pregnancy</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-5">Number of live births</div>
                         <div class="col-md-3">Permanant</div>
@@ -775,10 +819,19 @@
                           </div>
                         </div>
                       <!--end 5 section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="sixth section">
                       <!--start sixth section-->
-                      <h4>06. After Delivery Protection</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>06. After Delivery Protection</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-6">
                           <mat-form-field class="example-full-width">
@@ -937,10 +990,19 @@
                         </div>
                         </div>
                       <!-- end sixth section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="seventh_section">
                       <!--start 7 section-->
-                      <h4>07. Child Protection</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>07. Child Protection</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-6">
                           <mat-form-field class="example-full-width">
@@ -1088,10 +1150,19 @@
                          </div>
                        </div>
                       <!--end 7 section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="8th_section">
                       <!--start 8 section-->
-                      <h4>08. Child Protection(1-5 years) </h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>08. Child Protection(1-5 years)</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-6">
                           <mat-form-field class="example-full-width">
@@ -1309,10 +1380,19 @@
                         </div>
                       </div>
                       <!--end 8 section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="9th_section">
                       <!--start 9 section-->
-                      <h4>09. Child Protection(5-10 years and 10-19 years)</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>09. Child Protection(5-10 years and 10-19 years)</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                         <div class="col-md-6">
                           <mat-form-field class="example-full-width">
@@ -1368,10 +1448,20 @@
                         </div>
                       </div>
                       <!--end 9 section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="10th_section">
                       <!--start 10 section-->
-                      <h4>10. Family Planning</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>10. Family Planning</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                     
                       <h5>Tablets</h5>
                       <div class="row">
                         <div class="col-md-4">
@@ -1622,10 +1712,20 @@
                             </div>
                           </div>
                       <!--end 10 section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="11th_section">
                       <!--start 11th section-->
-                      <h4>11. Men And Women Health</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>11. Men And Women Health</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                     
                       <div class="row">
                         <div class="col-md-6">Newly identified men and women with arresements</div>
                         <div class="col-md-2">
@@ -1660,10 +1760,20 @@
                         </div>
                       </div>
                       <!--end 11th section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="12th_section">
                       <!--start 12 section-->
-                      <h4>12. Others</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>12. Others</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                      
                       <div class="row">
                         <div class="col-md-6">
                           <mat-form-field class="example-full-width">
@@ -1706,10 +1816,20 @@
                         </div>
                       </div>
                       <!--end 12 section-->
+                      </mat-expansion-panel>
                     </div>
                     <div class="13th_section">
                       <!--strt 13 section-->
-                      <h4>13. Coming for checking</h4>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>13. Coming for checking</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                     
                       <div class="row">
                         <div class="col-md-4">
                           <mat-form-field class="example-full-width">
@@ -1745,6 +1865,7 @@
                         </div>
                       </div>
                       <!--end 13 section-->
+                      </mat-expansion-panel>
                     </div>
                       
                  <input type="submit" value="Submit details" class="btn btn-danger pull-right">
