--- a/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
@@ -348,7 +348,7 @@
                 </mat-expansion-panel>
                     </mat-accordion>
                     <div *ngIf="onHidden()">
-                        <input type="submit" value="Update" class="btn btn-info pull-right">
+                        <input type="submit" value="{{'update'|translate}}" class="btn btn-info pull-right">
                     </div>
                     
               </form>
