--- a/Frontend/src/app/MOHComponents/view-familyby-id/view-familyby-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-familyby-id/view-familyby-id.component.html
@@ -264,7 +264,8 @@
                       </div>
                     </mat-expansion-panel>
                       <div *ngIf="onHidden()">
-                        <input type="submit" value={{'update'| translate=""" class="btn btn-danger pull-right">
+                        
+                        <input type="submit" value="{{'update'|translate}}" class="btn btn-info pull-right">
                       </div>
                       </form>
                         <div *ngIf="success"><h1>You submitted a record</h1></div>
